--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,15 @@ header .headercontainer {
 .btn-skills {
     border-radius:50%;
     display: inline-block;
-    border: solid 4px #91C8FF;
+    border: solid 6px #91C8FF;
     transition: all .3s ease-in-out;
     overflow: hidden;
 }
 
+.btn-skills:hover {
+    border-radius:50%;
+    border: solid 6px #297ACC;
+}
 
 
 
