--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ header .navcontainer {
 .projects .title {
     font-weight: 100;
     font-size: 3.5em;
-    font-family: "Helvetica Neue";
+    font-family: "Roboto";
     color: #fff;
 
     text-align: center;
@@ -200,7 +200,7 @@ header .navcontainer {
 .projects .desc {
     font-weight: 100;
     font-size: 1.75em;
-    font-family: "Helvetica Neue";
+    font-family: "Roboto";
     color: #fff;
 
     text-align: center;
