--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,12 @@ header .navcontainer {
     padding: 8px;
     background-color: #fff;
     display: inline-block;
+
+    opacity:0;
+    -moz-transition: opacity 2s; /* Firefox 4 */
+    -webkit-transition: opacity 2s; /* Safari and Chrome */
+    -o-transition: opacity 2s;
+    transition: opacity 2s;
 }
 
 .projects .firstproject {
