--- a/pinpoint/css/bootstrap.css
+++ b/pinpoint/css/bootstrap.css
@@ -916,7 +916,7 @@ a {
 a:hover,
 a:focus {
   color: #2a6496;
-  text-decoration: underline;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
@@ -2375,14 +2375,14 @@ output {
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 .form-control::-moz-placeholder {
-  color: #777;
+  color: #BFBFBF;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #777;
+  color: #BFBFBF;
 }
 .form-control::-webkit-input-placeholder {
-  color: #777;
+  color: #BFBFBF;
 }
 .form-control[disabled],
 .form-control[readonly],
@@ -3037,7 +3037,7 @@ fieldset[disabled] .btn-link {
 .btn-link:hover,
 .btn-link:focus {
   color: #2a6496;
-  text-decoration: underline;
+  text-decoration: none;
   background-color: transparent;
 }
 .btn-link[disabled]:hover,
