--- a/css/style.css
+++ b/css/style.css
@@ -314,3 +314,61 @@ footer {
 
 
 
+
+/* KNOWLEDGE SECTION
+-------------------------------------------------- */
+
+.knowledge {
+    background: #fff;
+}
+
+.knowledge headercontainer {
+    text-align: center;
+    width: 100%;
+}
+
+.knowledge h2 {
+    padding-top: 80px;
+    padding-bottom: 60px;
+    font-weight: 100;
+    font-size: 5em;
+    font-family: "Helvetica Neue", "Montserrat", sans-serif;
+    text-align: center;
+    color: #fff;
+}
+
+.knowledge hr {
+    width: 70%;
+    margin-left: 15%;
+}
+
+
+.knowledge .title {
+    font-weight: 100;
+    font-size: 3.2em;
+    font-family: "Helvetica Neue", "Lato", sans-serif;
+    color: #000;
+
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 55px;
+}
+
+.knowledge .desc {
+    font-weight: 100;
+    font-size: 1.55em;
+    font-family: "Helvetica Neue", "Lato", sans-serif;
+    color: #000;
+
+    text-align: center;
+    margin-bottom: 55px;
+
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+
+
+
+
+
