--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ padding: 0;
 
 
 
-
 /* NAVIGATION BAR
 -------------------------------------------------- */
 
@@ -76,8 +75,8 @@ header {
 }
 
 header .headercontainer {
-    padding-top: 115px;
-    padding-bottom: 65px;
+    padding-top: 110px;
+    padding-bottom: 60px;
     text-align: center;
     width: 100%;
 }
@@ -368,6 +367,24 @@ footer {
     background: #fff;
 }
 
+.row .skillstitle {
+    font-weight: 100;
+    font-size: 4.2em;
+    font-family: "Helvetica Neue", "Lato", sans-serif;
+    color: #000;
+
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 25px;
+}
+
+.row .skillstitle hr {
+    margin-top: 40px;
+    margin-bottom: 120px;
+    width: 70%;
+    margin-left: 15%;
+}
+
 #skill { 
     list-style: none;
     font: 35px "Helvetica Neue", sans-serif;
@@ -376,7 +393,7 @@ footer {
     margin: 100px auto 0;
     position: relative;
     line-height: 0em;
-    padding: 30px 0;
+    padding: 0 0;
 }
 
 #skill li { 
