--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ header .navcontainer {
     width:60%;
     -moz-animation:wordpress 2s ease-out;
     -webkit-animation:wordpress 2s ease-out;
-    background-color: #f674a4;
+    background-color: #FF0000;
 }
 
 
