--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,8 @@ header {
 }
 
 header .headercontainer {
-    padding-top: 120px;
-    padding-bottom: 80px;
+    margin-top: 130px;
+    margin-bottom: 90px;
     text-align: center;
     width: 100%;
 }
@@ -396,7 +396,7 @@ header .navcontainer {
     width:60%;
     -moz-animation:wordpress 2s ease-out;
     -webkit-animation:wordpress 2s ease-out;
-    background-color: #FF0000;
+    background-color: #C44756;
 }
 
 
