--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,13 @@ padding: 0;
     border-radius: 50%;
     display: inline-block;
     border: solid 6px #91C8FF;
-    transition: all .3s ease-in-out;
+    transition: all 1s ease-in-out;
     overflow: hidden;
+    opacity:0;
+    -moz-transition: opacity 2s; /* Firefox 4 */
+    -webkit-transition: opacity 2s; /* Safari and Chrome */
+    -o-transition: opacity 2s;
+    transition: opacity 2s;
 }
 
 .btn-trifold:hover {
