--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ padding: 0;
     border-radius: 50%;
     display: inline-block;
     border: solid 6px #91C8FF;
-    transition: all 1s ease-in-out;
+    transition: all .3s ease-in-out;
     overflow: hidden;
 }
 
