--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ padding: 0;
 
 .btn-trifold:hover {
     border-radius: 50%;
-    border: solid 6px #297ACC;
+    border: solid 6px #4A4AB8;
 }
 
 .btn-nav {
