--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ header .navcontainer {
 
 .about {
     padding-bottom: 260px;
-    background-image:url(../images/columbia.png);
+    background-image:url(../images/columbia.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-color: #F1EDF1;
